--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,6 @@ html{
 }
 
 body{
-    padding-top: 50px;
     background-color: whitesmoke;
 }
 .nav-container {
@@ -86,9 +85,75 @@ nav p {
         text-decoration: underline;
     }
     nav ul{
-        padding: 15px 0;
+        padding: 14px 0px;
     }
 }
 
 
+.hero{
+    font-family: 'Rubik Microbe', cursive;
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+        )
+    ,url(imagenes/hero2.jpg);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-shadow: 0 0 5px black;
+    
+}
 
+.perfil{
+    background-color: lightgray;
+}
+.perfil h2 {
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    line-height: 200px;
+    font-size: 43px;
+    padding-bottom: 20vh;
+}
+
+.perfil p {
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    font-size: 34px;
+    padding: 30px;
+}
+
+.trabajos h3{
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    line-height: 90vh;
+    font-size: 65px;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+        )
+    ,url(imagenes/fondo-trabajos.jpg);
+    color: white;
+    text-shadow: 0 0 3px black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.img-trabajos{
+    display: grid;
+    grid-template-columns: repeat(minmax(auto-fill));
+}
+.img-trabajos img{
+    max-width: 100%;
+    padding: 10px;
+}
