--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
 /* Fin hero*/
 
 #projects{
-    background-image: url(https://static.vecteezy.com/system/resources/previews/000/696/278/non_2x/textured-black-background-vector.jpg);
+    background-image: url(img/secproyec);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
