--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
 /* Fin hero*/
 
 #projects{
-    background-image: url(img/secproyec);
+    background-image: url(img/secproyec.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
