--- a/style.css
+++ b/style.css
@@ -82,6 +82,26 @@ body{
     font-size: 50px;
 }
 /* Fin hero*/
+#cv h3{
+    font-size: 70px;
+    color: white;
+    display: block;
+    padding-top: 20vh;
+    padding-bottom: 30vh;
+}
+#cv a {
+    color: black;
+    text-decoration: none;
+    font-size: 30px;
+    background-color:rgb(117, 191, 173);
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    color: white;
+}
+#cv a:hover{
+    background-color:rgb(58, 92, 83);
+}
 
 #projects{
     background-image: url(img/secproyec.jpg);
