--- a/css/works.css
+++ b/css/works.css
@@ -169,7 +169,7 @@ p{
 @media(max-width:1071px){
     .contenedor-works{
         width: 100%;
-        height: 200vh;
+        height: 1800px;
         grid-template-columns: repeat(2,1fr);
     }
 }
