--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    Height:100vh;
 }
 .contenedor{
     display: flex;
